Build correct title per node in nav largetree
Fix horizontal scroll bug

--- a/public/app/assets/stylesheets/archivesspace/infinite-scroll.scss
+++ b/public/app/assets/stylesheets/archivesspace/infinite-scroll.scss
@@ -100,7 +100,7 @@ position: absolute;
 display: none;
 }
 .table-row.largetree-node[data-is-expanded='true'] + .table-row-group {
-display: block;
+display: contents;
 }
 
 .infinite-scroll-container {
